# notion-sql

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REFACTORING_SUMMARY.md  RELEASING.md  REQUEST.md  SECURITY.md  deny.toml  justfile
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
.planning/codebase/: BEST_PRACTICES_AUDIT.md
docs/: CLEAN-ROOM-AUDIT-FINAL.md  CLEAN-ROOM-AUDIT-SUMMARY.md  CLEAN-ROOM-AUDIT.md  PLAN-notion-sql-cli.md  RELEASE-PROCEDURE.md  RUST-BEST-PRACTICES.md  SESSION-STATE.md  TODO.md  WORKFLOW.md
docs/superpowers/plans/: 2026-06-08-tooling-hardening.md
docs/superpowers/specs/: 2026-06-08-tooling-hardening-design.md
examples/: README.md  aggregate_functions.md  delete_records.md  insert_record.md  select_basic.md  update_records.md
scripts/: check-headers.sh  remediate-audit-issues.sh  verify-release.sh  windows-ci-job.yml
src/: cli.rs  filter.rs  lib.rs  main.rs  notion.rs  output.rs  schema.rs  sql.rs  value.rs
tests/: cli.rs  filter.rs  integration.rs  notion.rs  output.rs  schema.rs  sql.rs  value.rs
